--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,27 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   intl: ^0.20.2
 
+  # Firebase initialization
+  firebase_core: ^1.20.0    # Firebase initialization (latest stable version)
+  
+  # Firebase Authentication
+  firebase_auth: ^4.0.0     # Firebase Authentication (latest stable version)
+  
+  # Firestore database
+  cloud_firestore: ^4.0.0   # Firestore database (latest stable version)
+
+  # Other dependencies
+  material_color_utilities: ^0.12.0
+  vector_math: ^2.1.5
+  async: ^2.13.0
+  fake_async: ^1.3.3
+  leak_tracker: ^11.0.1
+  lints: ^6.0.0
+  test_api: ^0.7.5
+  vm_service: ^15.0.0
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
