--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,27 +32,13 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  smooth_page_indicator: ^1.0.0+2
+  
   intl: ^0.20.2
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.0
+  cloud_firestore: ^4.7.0
 
-  # Firebase initialization
-  firebase_core: ^1.20.0    # Firebase initialization (latest stable version)
   
-  # Firebase Authentication
-  firebase_auth: ^4.0.0     # Firebase Authentication (latest stable version)
-  
-  # Firestore database
-  cloud_firestore: ^4.0.0   # Firestore database (latest stable version)
-
-  # Other dependencies
-  material_color_utilities: ^0.12.0
-  vector_math: ^2.1.5
-  async: ^2.13.0
-  fake_async: ^1.3.3
-  leak_tracker: ^11.0.1
-  lints: ^5.0.0
-  test_api: ^0.7.5
-  vm_service: ^15.0.0
 
 
 
