--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   
   intl: ^0.20.2
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.0
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.18.0
   cloud_firestore: ^4.7.0
 
   
+dependency_overrides:
+  js: ^0.6.7
 
 
 
