--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.18.0
   cloud_firestore: ^4.7.0
+  
+  shared_preferences: ^2.5.3
 
   
 dependency_overrides:
