--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   
   intl: ^0.20.2
-  firebase_core: ^2.30.0
+  
   firebase_auth: ^4.18.0
   cloud_firestore: ^4.7.0
+  flutter_launcher_icons: ^0.13.1
+  firebase_core: ^2.27.0
+  firebase_messaging: ^14.7.3
   
   shared_preferences: ^2.5.3
 
@@ -66,6 +69,13 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/splash.png"
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
