--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   firebase_core: ^2.27.0
   firebase_messaging: ^14.7.3
-  
+  image_picker: ^1.0.0
   shared_preferences: ^2.5.3
+  firebase_storage: ^11.2.7
+  firebase_app_check: ^0.2.2+1
 
   
 dependency_overrides:
@@ -87,6 +89,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icon/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
