--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_storage: ^11.2.7
   firebase_app_check: ^0.2.2+1
+  path: ^1.8.0
+  google_sign_in: ^6.1.0
 
   
 dependency_overrides:
@@ -89,7 +91,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icon/
-    
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
